Add uuid to the package dependencies

--- a/package.json
+++ b/package.json
@@ -5,5 +5,7 @@
   "main": "index.js",
   "author": "Jonas Auer <jonas.auer.94@gmail.com>",
   "license": "GPL-3.0",
-  "dependencies": {}
+  "dependencies": {
+    "uuid": "^3.0.1"
+  }
 }
