Add a working implementation for the local server

--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "main": "index.js",
   "author": "Jonas Auer <jonas.auer.94@gmail.com>",
   "license": "GPL-3.0",
+  "scripts": {
+    "test": "standard"
+  },
   "dependencies": {
     "uuid": "^3.0.1"
+  },
+  "devDependencies": {
+    "standard": "^8.6.0"
   }
 }
