--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "standard"
   },
   "dependencies": {
+    "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
     "uuid": "^3.0.1"
