--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
+    "color-name": "^1.1.1",
     "express": "^4.14.1",
     "uuid": "^3.0.1"
   },
