--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.16.0",
     "color-name": "^1.1.1",
     "express": "^4.14.1",
+    "lodash": "^4.17.4",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
